--- a/applications/api-spec.yaml
+++ b/applications/api-spec.yaml
@@ -1,9 +1,10 @@
 swagger: '2.0'
 info:
   version: '2.0'
-  title: "Nexmo Applications API"
+  title: "Nexmo Application API"
 securityDefinitions:
   $ref: ../api-spec.yaml#/securityDefinitions
+
 paths:
   /applications:
     get:
@@ -165,6 +166,7 @@ paths:
       responses:
         '204':
           description: No Content
+
   '/applications/{app_uuid}/keys':
     parameters:
       - $ref: "#/parameters/app_uuid"
@@ -194,6 +196,7 @@ paths:
               event_url: 'http://myeventurl.com'
               name: Nexmo-conference
               numberpool_id: '10'
+
   '/applications/{app_uuid}/keys/{key_id}':
     parameters:
       - $ref: "#/parameters/app_uuid"
@@ -309,7 +312,6 @@ definitions:
       event_url: 'http://myeventurl.com'
       name: Nexmo-conference
       numberpool_id: '10'
-      
 
 parameters:
   app_uuid:
